<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pilih_jenis_mobil"
                android:layout_margin="@dimen/_10sdp"
                android:fontFamily="serif"
                android:textSize="@dimen/_10ssp"
                android:textColor="@android:color/black"
                android:textAlignment="textStart"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cd_mobil_minvan"
                    android:layout_width="@dimen/_140sdp"
                    android:layout_height="@dimen/_80sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:elevation="@dimen/_2sdp"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:cardCornerRadius="@dimen/_5sdp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <ImageView
                            android:id="@+id/img_minivan"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_50sdp"
                            android:layout_margin="@dimen/_5sdp"
                            android:scaleType="centerInside"
                            tools:src="@drawable/tes" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/minivan"
                            android:fontFamily="serif"
                            android:textSize="@dimen/_10ssp"
                            android:textColor="@android:color/black"
                            android:textAlignment="center"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cd_mobil_sedan"
                    android:layout_width="@dimen/_140sdp"
                    android:layout_height="@dimen/_80sdp"
                    android:layout_marginStart="@dimen/_3sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:elevation="@dimen/_2sdp"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:cardCornerRadius="@dimen/_5sdp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                    <ImageView
                        android:id="@+id/img_sedan"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_50sdp"
                        android:layout_margin="@dimen/_5sdp"
                        android:scaleType="centerInside"
                        tools:src="@drawable/tes2" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sedan"
                        android:fontFamily="serif"
                        android:textSize="@dimen/_10ssp"
                        android:textColor="@android:color/black"
                        android:textAlignment="center"/>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/cd_alamat"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:elevation="@dimen/_2sdp"
                android:layout_gravity="center_horizontal"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="@dimen/_5sdp">

                <TextView
                    android:id="@+id/txt_select_alamat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pilih_alamat"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:maxLength="30"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:fontFamily="serif"
                    android:drawableEnd="@drawable/ic_arrow_right_black_24dp"
                    android:textColor="@android:color/black" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:visibility="gone"
                tools:visibility="visible"
                android:id="@+id/cd_alamat_lengkap"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_90sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:elevation="@dimen/_2sdp"
                android:layout_gravity="center_horizontal"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="@dimen/_5sdp">

                <TextView
                    android:id="@+id/txt_alamat_lengkap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Jl. ir. H. Juanda no 11L, Rangkasbitung"
                    android:drawableStart="@drawable/ic_baseline_location_on_red_24"
                    android:drawablePadding="@dimen/_10sdp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:fontFamily="serif"
                    android:textColor="@android:color/black" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/destinasi_populer_di_jakarta"
                android:layout_margin="@dimen/_10sdp"
                android:fontFamily="serif"
                android:textSize="@dimen/_10ssp"
                android:textColor="@android:color/black"
                android:textAlignment="textStart" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_destinasi"
                android:layout_width="match_parent"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</LinearLayout>